Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/SFDC_Channel_Account_Plan__c.object
<CustomObject>
    <description>High level, time bound plan outlining joint vision statements and a roadmap for success. Channel plans are created for vendors and partners.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Challenges__c</fullName>
        <label>Business Challenges</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Go_to_Market__c</fullName>
        <label>Go To Market Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Account Plans</relationshipLabel>
        <relationshipName>R00No0000000pcC1EAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Planning Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <type>TextArea</type>
    </fields>
    <label>Channel Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CurrentFYPlans</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period__c</field>
            <operation>equals</operation>
            <value>2005</value>
        </filters>
        <label>Current FY Plans</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Channel Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>